--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   const CONFIG = {
     commandPathDelimiter: '/',
     commandSearchDelimiter: ' ',
-    defaultSearchTemplate: 'https://google.com/?q={}',
+    defaultSearchTemplate: 'https://google.com/search?q={}',
     openLinksInNewTab: true,
     suggestionLimit: 4,
   };
@@ -55,22 +55,28 @@
       searchTemplate: '/search/results/all/?keywords={}',
       url: 'https://www.linkedin.com',
     },
+    n: {
+        name: 'Neverlose',
+        url: 'https://neverlose.cc'
+    },
     m: {
       name: 'Mail',
       searchTemplate: '/mail/u/0/#search/{}',
       suggestions: [],
       url: 'https://mail.google.com/mail/u/0/#inbox',
     },
-    r: {
-      name: 'Reddit',
-      searchTemplate: '/search?q={}',
-      suggestions: [],
-      url: 'https://www.reddit.com',
+    o: {
+        name: 'Moodle',
+        url: 'https://moodle.itmo.ru/course/view.php?id=109'
     },
-    '?': {
-      name: 'README.md',
-      url: 'https://read.xvvvyz.xyz/xvvvyz/tilde/main/README.md',
+    p: {
+        name: 'Primordial',
+        url: 'https://community.primordial.dev'
     },
+    s: {
+        name: 'PCMS',
+        url: 'https://neerc.ifmo.ru/pcms2client/login.xhtml'
+    }
   };
 </script>
 
