--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
       suggestions: [],
       url: 'https://github.com',
     },
+    i: {
+      name: 'ISU',
+      url: 'https://isu.ifmo.ru',
+    },
     k: {
       name: 'Keep',
       searchTemplate: '/u/0/#search/text={}',
