add wandb & lzt

--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
         suggestions: ['s/id/luapaster', 's/id/luapaster/inventory', 's/market'],
         url: "https://steamcommunity.com",
     },
+    w: {
+        name: "Weight & Biases",
+        suggestions: ['w/jovvik/ai-eskf'],
+        url: "https://wandb.ai",
+    },
+    z: {
+        name: 'LZT',
+        url: 'https://zelenka.guru',
+    },
     ";": {
         name: 'PCMS',
         url: 'https://neerc.ifmo.ru/pcms2client/login.xhtml'
