--- a/index.html
+++ b/index.html
@@ -21,26 +21,28 @@
             suggestions: ['0 8000', '0 8080'],
             url: 'http://localhost:3000',
         },
-        a: {
-            name: 'Anime365',
-            suggestions: [],
-            url: 'https://anime365.ru',
-        },
         c: {
             name: 'Calendar',
             searchTemplate: '/calendar/u/0/r/search?q={}',
             suggestions: [],
             url: 'https://calendar.google.com/calendar/u/0/r',
         },
+        ca: {
+            name: 'Claude',
+            url: 'https://claude.ai'
+        },
         cl: {
             name: 'Cloudflare',
             url: 'https://dash.cloudflare.com',
         },
         d: {
-            name: 'Drive',
-            searchTemplate: '/drive/u/0/search?q={}',
-            suggestions: [],
-            url: 'https://drive.google.com/drive/u/0/my-drive',
+            name: 'Deepl',
+            searchTemplate: '#en/de/{}',
+            url: 'https://www.deepl.com/translator',
+        },
+        e: {
+            name: 'CodeExpert',
+            url: 'https://expert.ethz.ch'
         },
         g: {
             name: 'GitHub',
@@ -59,32 +61,28 @@
             url: 'https://gamesense.pub',
             suggestions: ['gs/forums/profile.php?id=986'],
         },
-        i: {
-            name: 'ISU',
-            url: 'https://isu.ifmo.ru',
-        },
         k: {
             name: 'Keep',
             searchTemplate: '/u/0/#search/text={}',
             suggestions: [],
             url: 'https://keep.google.com/u/0',
         },
+        ki: {
+            name: 'Kidua',
+            url: 'https://kidua.net',
+        },
         l: {
             name: 'LinkedIn',
             searchTemplate: '/search/results/all/?keywords={}',
             url: 'https://www.linkedin.com',
         },
-        n: {
-            name: 'Neverlose',
-            url: 'https://neverlose.cc'
-        },
         mo: {
             name: 'Moodle',
-            url: 'https://moodle.itmo.ru/course/view.php?id=109'
+            url: 'https://moodle-app2.let.ethz.ch/'
         },
-        pc: {
-            name: 'PCMS',
-            url: 'https://neerc.ifmo.ru/pcms2client/login.xhtml'
+        n: {
+            name: 'Notion',
+            url: 'https://www.notion.so',
         },
         pm: {
             name: 'Primordial',
