--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             searchTemplate: '/search/results/all/?keywords={}',
             url: 'https://www.linkedin.com',
         },
-        mo: {
+        m: {
             name: 'Moodle',
             url: 'https://moodle-app2.let.ethz.ch/'
         },
@@ -84,7 +84,7 @@
             name: 'Notion',
             url: 'https://www.notion.so',
         },
-        pm: {
+        p: {
             name: 'Primordial',
             url: 'https://community.primordial.dev'
         },
@@ -112,7 +112,7 @@
         },
         z: {
             name: 'LZT',
-            url: 'https://zelenka.guru',
+            url: 'https://lzt.market',
         }
     };
 </script>
