remove kidua and codeExpert, add researchGate and ETH outlook

--- a/index.html
+++ b/index.html
@@ -40,10 +40,6 @@
             searchTemplate: '#en/de/{}',
             url: 'https://www.deepl.com/translator',
         },
-        e: {
-            name: 'CodeExpert',
-            url: 'https://expert.ethz.ch'
-        },
         g: {
             name: 'GitHub',
             searchTemplate: '/search?q={}',
@@ -67,10 +63,6 @@
             suggestions: [],
             url: 'https://keep.google.com/u/0',
         },
-        ki: {
-            name: 'Kidua',
-            url: 'https://kidua.net',
-        },
         l: {
             name: 'LinkedIn',
             searchTemplate: '/search/results/all/?keywords={}',
@@ -84,9 +76,18 @@
             name: 'Notion',
             url: 'https://www.notion.so',
         },
+        o: {
+            name: 'Outlook',
+            url: 'https://outlook.office.com/mail/',
+        },
         p: {
             name: 'Primordial',
             url: 'https://community.primordial.dev'
+        },
+        r: {
+            name: 'ResearchGate',
+            searchTemplate: '/search.Search.html?query={}',
+            url: 'https://www.researchgate.net',
         },
         s: {
             name: "Steam",
